Add more info. Responsive pictures

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE HTML>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
 
-  <title>Pablo Lozano</title>
-  
+<head>
+
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="author" content="Pablo Lozano">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="images/seal_icon.png">
+
+  <title>Pablo Lozano</title>
+
 </head>
 
 
@@ -17,9 +21,9 @@
   
   <div class="personal">
     <div>
-      <p style="text-align:center">
-        <name>Pablo Lozano</name>
-      </p>
+      <div class="name">
+        Pablo Lozano
+      </div>
       <p>
         I am PhD researcher @ <a href="https://uc3m.es">Universidad Carlos III de Madrid</a> where I work on Complex Systems applied to Social Sciences, specially on cooperation and conflicts in hierarchical societies. 
         <br>
@@ -31,7 +35,7 @@
 
         <br>
 
-        I did my master's in Applied Mathematics and I my bachelor's in Industrial Engineering (specialization: Industrial Electroncis and Robotics), both at <a href="http://www.uc3m.es">UC3M</a>.
+        I did my master's in Applied Mathematics and I my bachelor's in Industrial Engineering (specialization: Industrial Electronics and Robotics), both at <a href="http://www.uc3m.es">UC3M</a>.
       </p>
 
       <p style="text-align:center">
@@ -45,7 +49,7 @@
     </div>
     
 
-    <div id="avatar">
+    <div class="image-hidden">
       <img alt="profile photo" src="images/profile.jpeg" class="avatar-pic">
     </div>
 
@@ -53,10 +57,10 @@
 
 
   <div class="">
-    <heading>Research</heading>
+    <h1>Research</h1>
     <p>
       I'm interested in complex sytems, machine learning, evolutionary game theory, and behavioral economics.
-      Much of my research is about inferring behavior from human groups and understand why.
+      Much of my research is about inferring behavior from human groups and understand how we can improve our lives.
     </p>
   </div>
 
@@ -64,12 +68,13 @@
 
 
 <br>
+<br>
 
 
-<div class="articles">
+<div class="list">
 
-  <div class="article">
-    <div class="article-img">
+  <div class="element">
+    <div class="image-hidden article-img">
       <img src='images/climate_uncertainty.png' width="160">
     </div>
 
@@ -91,9 +96,10 @@
     </div>
   </div>
 
+  <hr>
 
-  <div class="article">
-    <div class="article-img">
+  <div class="element">
+    <div class="image-hidden article-img">
       <img src='images/verbal_priming.jpeg' width="160">
     </div>
 
@@ -117,9 +123,10 @@
     </div>
   </div>
 
+  <hr>
 
-  <div class="article">
-    <div class="article-img">
+  <div class="element">
+    <div class="image-hidden article-img">
       <img src='images/interaction_differences.png' width="160">
     </div>
 
@@ -141,9 +148,10 @@
     </div>
   </div>
 
+  <hr>
 
-  <div class="article">
-    <div class="article-img">
+  <div class="element">
+    <div class="image-hidden article-img">
       <img src='images/Eta.png' width="160">
     </div>
 
@@ -165,9 +173,10 @@
     </div>
   </div>
 
+  <hr>
 
-  <div class="article">
-    <div class="article-img">
+  <div class="element">
+    <div class="image-hidden article-img">
       <img src='images/one-dim-ring.png' width="160">
     </div>
 
@@ -187,9 +196,10 @@
     </div>
   </div>
 
+  <hr>
 
-  <div class="article">
-    <div class="article-img">
+  <div class="element">
+    <div class="image-hidden article-img">
       <img src='images/networks_hist.png' width="160">
     </div>
 
@@ -216,10 +226,146 @@
 </div>
 
 
+<br>
+<br>
+
+
+<div class="information">
+  
+  <div class="">
+    <h1>Talks</h1>
+    <p>
+      These are the places I've been to, talked in or plan to go! If you think I could give a talk, feel free to invite me. Also, you can grab the slides (if any) and reuse them with attribution!
+    </p>
+  </div>
+
+</div>
+
+<div class="information">
+
+  <div class="list">
+
+    <div class="element">
+      <div class="talk-info">
+        <papertitle>Cooperation, social norm internalization, and hierarchical societies</papertitle>
+        <br>
+        <mainauthor>Talk</mainauthor>, at 8th <a href="https://sites.google.com/view/css-ccs20/home">Computational Social Science</a> (CSS) Satellite event at the Conference on Complex Systems (CCS).
+        <br>
+        <em>December 2020</em>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="element">
+      <div class="talk-info">
+        <papertitle>Hierarchies can arise spontaneously in egalitarian societies</papertitle>
+        <br>
+        <mainauthor>Poster</mainauthor>, at 5th <a href="https://2019.ic2s2.org/">International Conference in Computational Social Science</a> (IC2S2).
+        <br>
+        <em>July 2019</em>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="element">
+      <div class="talk-info">
+        <papertitle>Complexity 72 hours</papertitle>
+        <br>
+        Part of Ennio Bilancini’s group researching on social physics.
+        Derived from the three-day research event, there’s a pre-print in arXiv.
+        <br>
+        <em>June 2019</em>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="element">
+      <div class="talk-info">
+        <papertitle>SEEHB meeting</papertitle>
+        <br>
+        <mainauthor>Talk</mainauthor> at the second edition of the Southern Eastern Evolutionary and Human Behavior meeting at Georgia State University, Georgia (Atlanta).
+        <br>
+        <em>April 2019</em>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="element">
+      <div class="talk-info">
+        <papertitle>European Night of the Researchers</papertitle>
+        <br>
+        <mainauthor>Communication poster</mainauthor>: "Genre and technology: EU projects about Big Data."
+        <br>
+        <em>November 2018</em>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="element">
+      <div class="talk-info">
+        <papertitle>Cine: críticas, ingresos y correlaciones</papertitle>
+        <br>
+        <mainauthor>Communication poster</mainauthor>: "Genre and technology: EU projects about Big Data."
+        <br>
+        <em>November 2018</em>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<br>
+<br>
+
+<div class="information">
+  
+  <div class="extra-info">
+    <h1>Extra</h1>
+    <ul>
+      <li>
+        <mainauthor>Community Manager</mainauthor> for research Twitter account (<a href="http://www.twitter.com/gisc_group">@gisc_group</a>).
+      </li>
+      <li>
+        <mainauthor>Seminar organizer</mainauthor> for <a href=http://valbuena.fis.ucm.es/gisc/">GISC</a> group in the Mathematics Department at Universidad Carlos III de Madrid.
+      </li>
+      <li>
+        <mainauthor>Webmaster</mainauthor> for the <a href="https://matematicas.uc3m.es/">Mathematics Department</a> at Universidad Carlos III de Madrid.
+      </li>
+    </ul>
+    <h2>Technical skills</h2>
+    <ul>
+      <li><mainauthor>Programming</mainauthor>: Python, C, R, Scala, Typescript, Haskell, Lisp.</li>
+      <li><mainauthor>ML and data analysis</mainauthor>: Tensorflow, Keras, Scikit.</li>
+      <li><mainauthor>Web development</mainauthor>: HTML, CSS, Javascript. Django, Flask.</li>
+      <li><mainauthor>Frameworks and practices</mainauthor>: Git, Scrum, Agil.</li>
+      <li><mainauthor>Reviewer</mainauthor> for <em>Nature Scientific Reports</em>, <em>PLOS One</em> and <em>IOP Science</em> scientific journals.</li>
+    </ul>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br><br>
 
 <div class="credits">
     <p style="font-size:small;">
-  Stolen and modified from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>.
+  Modified from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>.
   </p>
 </div>
 
