--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       </p>
 
       <p>
-        I've worked (mainly) on modelling and experiment design. I use tools from evolutionary game theory, machine learning, and behavioral economics. 
+        I work using modelling techniques (agent-based modelling, mainly) and using experimental approaches too. I use tools from evolutionary game theory, machine learning, and behavioral economics. 
 
         <br>
 
-        I did my master's in Applied Mathematics and I my bachelor's in Industrial Engineering (specialization: Industrial Electronics and Robotics), both at <a href="http://www.uc3m.es">UC3M</a>.
+        I did my master's in Applied Mathematics and my bachelor's in Industrial Engineering (specialization: Industrial Electronics and Robotics), both at <a href="http://www.uc3m.es">UC3M</a>.
       </p>
 
       <p style="text-align:center">
