--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
 
   </div>
 
+</div>
 
+<br>
+
+<div class="information">
   <div class="">
     <h1>Research</h1>
     <p>
@@ -63,11 +67,9 @@
       Much of my research is about inferring behavior from human groups and understand how we can improve our lives.
     </p>
   </div>
-
 </div>
 
 
-<br>
 <br>
 
 
