--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       <br>
       <mainauthor>Pablo Lozano</mainauthor>,
       <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>,
-      <a href="">Francesca Giardini</a>
-      <a href="">Rafael Wittek</a>
+      <a href="">Francesca Giardini</a>,
+      <a href="">Rafael Wittek</a>,
       <a href="">Siegwart Lindenberg</a>
       <br>
       <em>In preparation</em>, 2021 
@@ -139,7 +139,7 @@
       <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>,
       <a href="https://anxosanchez.eu/">Angel Sánchez</a>
       <br>
-      <em>In review</em>, 2021 
+      <em>Under review</em>, 2021 
       <br>
       <!-- <a href="">article</a> &nbsp/&nbsp -->
       <!-- <a href="">metrics</a> &nbsp/&nbsp -->
