--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <h1>Research</h1>
     <p>
       I'm interested in complex sytems, machine learning, evolutionary game theory, and behavioral economics.
-      Much of my research is about inferring behavior from human groups and understand how we can improve our lives.
+      Much of my research is about inferring behavior from human groups and understand how societies work.
     </p>
   </div>
 </div>
