Add English certificate

--- a/index.html
+++ b/index.html
@@ -334,16 +334,11 @@
       <li><mainauthor>Web development</mainauthor>: HTML, CSS, Javascript. Django, Flask.</li>
       <li><mainauthor>Frameworks and practices</mainauthor>: Git, Scrum, Agil.</li>
       <li><mainauthor>Reviewer</mainauthor> for <em>Nature Scientific Reports</em>, <em>PLOS One</em> and <em>IOP Science</em> scientific journals.</li>
+      <li><mainauthor>Languages</mainauthor>: <a href="data/english.pdf">English (C1)</a>, French (B2), German (A1), and Italian.</li>
     </ul>
   </div>
 
 </div>
-
-
-
-
-
-
 
 
 
