Add sysadmin and languages

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <mainauthor>Seminar organizer</mainauthor> for <a href=http://valbuena.fis.ucm.es/gisc/">GISC</a> group in the Mathematics Department at Universidad Carlos III de Madrid.
       </li>
       <li>
-        <mainauthor>Webmaster</mainauthor> for the <a href="https://matematicas.uc3m.es/">Mathematics Department</a> at Universidad Carlos III de Madrid.
+        <mainauthor>Webmaster</mainauthor> and <mainauthor>sysadmin</mainauthor> for the <a href="https://matematicas.uc3m.es/">Mathematics Department</a> at Universidad Carlos III de Madrid.
       </li>
     </ul>
     <h2>Technical skills</h2>
@@ -345,8 +345,9 @@
       <li><mainauthor>ML and data analysis</mainauthor>: Tensorflow, Keras, Scikit.</li>
       <li><mainauthor>Web development</mainauthor>: HTML, CSS, Javascript. Django, Flask.</li>
       <li><mainauthor>Frameworks and practices</mainauthor>: Git, Scrum, Agil.</li>
+      <li><mainauthor>Linux Systems Administrator</mainauthor> certification.</li>
       <li><mainauthor>Reviewer</mainauthor> for <em>Nature Scientific Reports</em>, <em>PLOS One</em> and <em>IOP Science</em> scientific journals.</li>
-      <li><mainauthor>Languages</mainauthor>: <a href="data/english.pdf">English (C1)</a>, French (B2), German (A1), and Italian.</li>
+      <li><mainauthor>Languages</mainauthor>: <a href="data/english.pdf">English (C1)</a>, French (B2), German (A1), and self-taught in Italian, Russian and Chinese.</li>
     </ul>
   </div>
 
