Add summer school, classes to economists and sysadmin

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <div class="information">
   
   <div class="">
-    <h1>Talks</h1>
+    <h1>Talks, seminars, etc.</h1>
     <p>
       These are the places I've been to, talked in or plan to go! If you think I could give a talk, feel free to invite me. Also, you can grab the slides (if any) and reuse them with attribution!
     </p>
@@ -246,6 +246,16 @@
 <div class="information">
 
   <div class="list">
+
+    <div class="element">
+      <div class="talk-info">
+        <papertitle>SFI Complexity Interactive</papertitle>
+        <br>
+        <mainauthor>Summer school</mainauthor>, at <a href="http://fises21joven.gefenol.es/">Santa Fe</a> Institute. 
+        <br>
+        <em>June-July 2021</em>
+      </div>
+    </div>
 
     <div class="element">
       <div class="talk-info">
