Update location SFI

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <div class="talk-info">
         <papertitle>SFI Complexity Interactive</papertitle>
         <br>
-        <mainauthor>Summer school</mainauthor>, at <a href="http://fises21joven.gefenol.es/">Santa Fe</a> Institute. 
+        <mainauthor>Summer school</mainauthor>, at <a href="http://fises21joven.gefenol.es/">Santa Fe</a> Institute, New Mexico (USA).
         <br>
         <em>June-July 2021</em>
       </div>
