--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="">
     <h1>Research</h1>
     <p>
-      I'm interested in complex sytems, machine learning, evolutionary game theory, and behavioral economics.
+      I'm interested in complex systems, machine learning, evolutionary game theory, and behavioral economics.
       Much of my research is about inferring behavior from human groups and understand how societies work.
     </p>
   </div>
