--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
   <div class="">
     <h1>Research</h1>
     <p>
-      I'm interested in complex systems, machine learning, evolutionary game theory, and behavioral economics.
+      I'm interested in complex systems, reinforcement learning, evolutionary game theory, and behavioral economics.
       Much of my research is about inferring behavior from human groups and understand how societies work.
+      All the articles are open access.
     </p>
   </div>
 </div>
@@ -263,7 +264,7 @@
       <div class="talk-info">
         <papertitle>Hierarchies and cooperation: an experiment</papertitle>
         <br>
-        <mainauthor>Talk</mainauthor>, at <a href="http://fises21joven.gefenol.es/">FisEs Joven 2021</a> Conference. 
+        <mainauthor><a href="data/fisesJoven2021.pdf">Talk</a></mainauthor>, at <a href="http://fises21joven.gefenol.es/">FisEs Joven 2021</a> Conference. 
         <br>
         <em>May 2021</em>
       </div>
@@ -275,7 +276,7 @@
       <div class="talk-info">
         <papertitle>Cooperation, social norm internalization, and hierarchical societies</papertitle>
         <br>
-        <mainauthor>Talk</mainauthor>, at 8th <a href="https://sites.google.com/view/css-ccs20/home">Computational Social Science</a> (CSS) Satellite event at the Conference on Complex Systems (CCS).
+        <mainauthor><a href"data/css2020.pdf">Talk</a></mainauthor>, at 8th <a href="https://sites.google.com/view/css-ccs20/home">Computational Social Science</a> (CSS) Satellite event at the Conference on Complex Systems (CCS).
         <br>
         <em>December 2020</em>
       </div>
