--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       <div class="talk-info">
         <papertitle>Cooperation, social norm internalization, and hierarchical societies</papertitle>
         <br>
-        <mainauthor><a href"data/css2020.pdf">Talk</a></mainauthor>, at 8th <a href="https://sites.google.com/view/css-ccs20/home">Computational Social Science</a> (CSS) Satellite event at the Conference on Complex Systems (CCS).
+        <mainauthor><a href="data/css2020.pdf">Talk</a></mainauthor>, at 8th <a href="https://sites.google.com/view/css-ccs20/home">Computational Social Science</a> (CSS) Satellite event at the Conference on Complex Systems (CCS).
         <br>
         <em>December 2020</em>
       </div>
