--- a/index.html
+++ b/index.html
@@ -354,10 +354,9 @@
     </ul>
     <h2>Technical skills</h2>
     <ul>
-      <li><mainauthor>Programming</mainauthor>: Python, C, R, Scala, Typescript, Haskell, Lisp.</li>
+      <li><mainauthor>Programming</mainauthor>: Python, C, R, C++, Scala, Haskell.</li>
       <li><mainauthor>ML and data analysis</mainauthor>: Tensorflow, Keras, Scikit.</li>
-      <li><mainauthor>Web development</mainauthor>: HTML, CSS, Javascript. Django, Flask.</li>
-      <li><mainauthor>Frameworks and practices</mainauthor>: Git, Scrum, Agil.</li>
+      <li><mainauthor>Web development</mainauthor>: Django, Flask. HTML/CSS, Javascript. </li>
       <li><mainauthor>Linux Systems Administrator</mainauthor> certification.</li>
       <li><mainauthor>Reviewer</mainauthor> for <em>Nature Scientific Reports</em>, <em>PLOS One</em> and <em>IOP Science</em> scientific journals.</li>
       <li><mainauthor>Languages</mainauthor>: <a href="data/english.pdf">English (C1)</a>, French (B2), German (A1), and self-taught in Italian, Russian and Chinese.</li>
