--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       <li><mainauthor>Programming</mainauthor>: Python, C, R, C++, Scala, Haskell.</li>
       <li><mainauthor>ML and data analysis</mainauthor>: Tensorflow, Keras, Scikit.</li>
       <li><mainauthor>Web development</mainauthor>: Django, Flask. HTML/CSS, Javascript. </li>
-      <li><mainauthor>Linux Systems Administrator</mainauthor> certification.</li>
+      <li><mainauthor>Linux Systems Administrator</mainauthor> <a href="https://ude.my/UC-9ORNNZ0Q">certification</a>.</li>
       <li><mainauthor>Reviewer</mainauthor> for <em>Nature Scientific Reports</em>, <em>PLOS One</em> and <em>IOP Science</em> scientific journals.</li>
       <li><mainauthor>Languages</mainauthor>: <a href="data/english.pdf">English (C1)</a>, French (B2), German (A1), and self-taught in Italian, Russian and Chinese.</li>
     </ul>
