--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <mainauthor>Community Manager</mainauthor> for research Twitter account (<a href="http://www.twitter.com/gisc_group">@gisc_group</a>).
       </li>
       <li>
-        <mainauthor>Seminar organizer</mainauthor> for <a href=http://valbuena.fis.ucm.es/gisc/">GISC</a> group in the Mathematics Department at Universidad Carlos III de Madrid.
+        <mainauthor>Seminar organizer</mainauthor> for <a href="http://valbuena.fis.ucm.es/gisc/">GISC</a> group in the Mathematics Department at Universidad Carlos III de Madrid.
       </li>
       <li>
         <mainauthor>Webmaster</mainauthor> and <mainauthor>sysadmin</mainauthor> for the <a href="https://matematicas.uc3m.es/">Mathematics Department</a> at Universidad Carlos III de Madrid.
