--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
   </div>
 </div>
 
-
 <br>
-
 
 <div class="list">
 
@@ -252,7 +250,7 @@
       <div class="talk-info">
         <papertitle>SFI Complexity Interactive</papertitle>
         <br>
-        <mainauthor>Summer school</mainauthor>, at <a href="http://fises21joven.gefenol.es/">Santa Fe</a> Institute, New Mexico (USA).
+        <mainauthor>Summer school</mainauthor>, at <a href="data/SFICI2021.pdf">Santa Fe</a> Institute, New Mexico (USA).
         <br>
         <em>June-July 2021</em>
       </div>
