--- a/index.html
+++ b/index.html
@@ -128,6 +128,29 @@
 
   <div class="element">
     <div class="image-hidden article-img">
+      <img src='images/carlos.jpg' width="160">
+    </div>
+
+    <div class="article-info">
+      <papertitle>Reinforcement learning for cooperational dynamics in uncertain reputation networks</papertitle>
+      <br>
+      Carlos Hernández Hernández bachelor's <mainauthor>thesis</mainauthor>. Co-supervised with <a href="https://anxosanchez.eu/">Angel Sánchez</a>.
+      <br>
+      <em>July</em>, 2021 
+      <br>
+      <!-- <a href="">article</a> &nbsp/&nbsp -->
+      <!-- <a href="">metrics</a> &nbsp/&nbsp -->
+      <!-- <a href="">supplementary</a> &nbsp/&nbsp -->
+      <!-- <a href="">bib ref</a> -->
+
+      <p>Agent-based model to study, using reinforcement learning, how individuals learn to behave in unreliable reputation environments within dynamic networks.</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="element">
+    <div class="image-hidden article-img">
       <img src='images/interaction_differences.png' width="160">
     </div>
 
@@ -248,6 +271,16 @@
 
     <div class="element">
       <div class="talk-info">
+        <papertitle>Conference on Complex Systems (CCS)An Experimental Approach to Hierarchies: High Ranked Individuals Exploit Low Ranked Ones But Act Altruistically</papertitle>
+        <br>
+        <mainauthor>Talk</mainauthor>, at the <a href="https://ccs2021.univ-lyon1.fr/#HOME">2021 Conference on Complex Systems (CCS)</a> in Lyon, France.
+        <br>
+        <em>October 2021</em>
+      </div>
+    </div>
+
+    <div class="element">
+      <div class="talk-info">
         <papertitle>SFI Complexity Interactive</papertitle>
         <br>
         <mainauthor>Summer school</mainauthor>, at <a href="data/SFICI2021.pdf">Santa Fe</a> Institute, New Mexico (USA).
@@ -352,11 +385,12 @@
     </ul>
     <h2>Technical skills</h2>
     <ul>
-      <li><mainauthor>Programming</mainauthor>: Python, C, R, C++, Scala, Haskell.</li>
+      <li><mainauthor>Programming</mainauthor>: Python, R, Scala, C, C++, Haskell.</li>
       <li><mainauthor>ML and data analysis</mainauthor>: Tensorflow, Keras, Scikit.</li>
-      <li><mainauthor>Web development</mainauthor>: Django, Flask. HTML/CSS, Javascript. </li>
-      <li><mainauthor>Linux Systems Administrator</mainauthor> <a href="https://ude.my/UC-9ORNNZ0Q">certification</a>.</li>
+      <li><mainauthor>Web development</mainauthor>: Django, Flask. HTML/CSS, Javascript.</li>
+      <li><mainauthor>Linux Systems Administrator</mainauthor> basic <a href="https://ude.my/UC-9ORNNZ0Q">certification</a>.</li>
       <li><mainauthor>Reviewer</mainauthor> for <em>Nature Scientific Reports</em>, <em>PLOS One</em> and <em>IOP Science</em> scientific journals.</li>
+      <li><mainauthor>Writing</mainauthor> course <a href="data/coursera_sciwrite.pdf"><em>Writing in the Sciences</em></a> from Stanford University.</li>
       <li><mainauthor>Languages</mainauthor>: <a href="data/english.pdf">English (C1)</a>, French (B2), German (A1), and self-taught in Italian, Russian and Chinese.</li>
     </ul>
   </div>
