Updating with CEU move

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         Pablo Lozano
       </div>
       <p>
-        I am PhD researcher @ <a href="https://uc3m.es">Universidad Carlos III de Madrid</a> where I work on Complex Systems applied to Social Sciences, specially on cooperation and conflicts in hierarchical societies. 
+        I am Junior visiting researcher @<a href="https://ceu.edu">Central European University</a> where I work on networks, AI, and computational social science.
         <br>
-        My advisors are <a href="https://anxosanchez.eu/">Angel Sánchez</a> and <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>.
+        I currently work with János Kertész, Márton Karsai, and Gerardo Íñiguez. Other coauthors are <a href="https://anxosanchez.eu/">Angel Sánchez</a> and <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>.
       </p>
 
       <p>
-        I work using modelling techniques (agent-based modelling, mainly) and using experimental approaches too. I use tools from evolutionary game theory, machine learning, and behavioral economics. 
+        I work using modelling techniques (agent-based modelling, mainly) but I use experimental approaches too. I make use of tools from network theory, machine learning, evolutionary game theory, and behavioral economics. 
 
         <br>
 
@@ -48,7 +48,6 @@
       </p>
     </div>
     
-
     <div class="image-hidden">
       <img alt="profile photo" src="images/profile.jpeg" class="avatar-pic">
     </div>
@@ -63,8 +62,8 @@
   <div class="">
     <h1>Research</h1>
     <p>
-      I'm interested in complex systems, reinforcement learning, evolutionary game theory, and behavioral economics.
-      Much of my research is about inferring behavior from human groups and understand how societies work.
+      I'm interested in complex systems, networks, machine learning in general and reinforcement learning in particular, evolutionary game theory, and behavioral economics.
+      Much of my research is focused on inferring behavior from human groups and understand how societies work.
       All the articles are open access.
     </p>
   </div>
