Fix typo in affiliation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="author" content="Pablo Lozano">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="images/duck_icon.png">
 
@@ -18,20 +18,20 @@
 <body>
 
 <div class="information">
-  
+
   <div class="personal">
     <div>
       <div class="name">
         Pablo Lozano
       </div>
       <p>
-        I am Junior visiting researcher @<a href="https://ceu.edu">Central European University</a> where I work on networks, AI, and computational social science.
+        I am Junior Visiting Researcher @<a href="https://ceu.edu">Central European University</a> where I work on networks, (explainable) AI, and computational social science.
         <br>
         I currently work with János Kertész, Márton Karsai, and Gerardo Íñiguez. Other coauthors are <a href="https://anxosanchez.eu/">Angel Sánchez</a> and <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>.
       </p>
 
       <p>
-        I work using modelling techniques (agent-based modelling, mainly) but I use experimental approaches too. I make use of tools from network theory, machine learning, evolutionary game theory, and behavioral economics. 
+        I work using modelling techniques (agent-based modelling, mainly) but I also use experimental approaches too. I make use of tools from network theory, machine learning, evolutionary game theory, and behavioral economics.
 
         <br>
 
@@ -47,7 +47,7 @@
         <a href="https://github.com/palozano">Github</a>
       </p>
     </div>
-    
+
     <div class="image-hidden">
       <img alt="profile photo" src="images/profile.jpeg" class="avatar-pic">
     </div>
@@ -85,7 +85,7 @@
       <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>,
       <a href="https://anxosanchez.eu/">Angel Sánchez</a>
       <br>
-      <em>In preparation</em>, 2021 
+      <em>In preparation</em>, 2021
       <br>
       <!-- <a href="">article</a> &nbsp/&nbsp -->
       <!-- <a href="">metrics</a> &nbsp/&nbsp -->
@@ -112,7 +112,7 @@
       <a href="">Rafael Wittek</a>,
       <a href="">Siegwart Lindenberg</a>
       <br>
-      <em>In preparation</em>, 2021 
+      <em>In preparation</em>, 2021
       <br>
       <!-- <a href="">article</a> &nbsp/&nbsp -->
       <!-- <a href="">metrics</a> &nbsp/&nbsp -->
@@ -135,7 +135,7 @@
       <br>
       Carlos Hernández Hernández bachelor's <mainauthor>thesis</mainauthor>. Co-supervised with <a href="https://anxosanchez.eu/">Angel Sánchez</a>.
       <br>
-      <em>July</em>, 2021 
+      <em>July</em>, 2021
       <br>
       <!-- <a href="">article</a> &nbsp/&nbsp -->
       <!-- <a href="">metrics</a> &nbsp/&nbsp -->
@@ -160,7 +160,7 @@
       <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>,
       <a href="https://anxosanchez.eu/">Angel Sánchez</a>
       <br>
-      <em>Under review</em>, 2021 
+      <em>Under review</em>, 2021
       <br>
       <!-- <a href="">article</a> &nbsp/&nbsp -->
       <!-- <a href="">metrics</a> &nbsp/&nbsp -->
@@ -185,7 +185,7 @@
       <a href="https://volweb2.utk.edu/~gavrila/">Sergey Gavrilets</a>,
       <a href="https://anxosanchez.eu/">Angel Sánchez</a>
       <br>
-      <em>Scientific Reports (Nature)</em>, 2020 
+      <em>Scientific Reports (Nature)</em>, 2020
       <br>
       <a href="https://www.nature.com/articles/s41598-020-71664-w">article</a> &nbsp/&nbsp
       <a href="https://www.nature.com/articles/s41598-020-71664-w/metrics">metrics</a> &nbsp/&nbsp
@@ -208,7 +208,7 @@
       <br>
       Bilge Aydin, Marta Biondo, Deepak Gupta, Mattia Ivaldi, Francesca Lipari, <mainauthor>Pablo Lozano</mainauthor>, Francesco Parino, Ennio Bilancini, Leonardo Boncinelli, Valerio Capraro
       <br>
-      <em>arXiv</em>, 2019 
+      <em>arXiv</em>, 2019
       <br>
       <a href="https://arxiv.org/abs/1906.09133">article</a> &nbsp/&nbsp
       <!-- <a href="">metrics</a> &nbsp/&nbsp -->
@@ -234,7 +234,7 @@
       <a href="https://scholar.google.com/citations?user=6vgFGvYAAAAJ&hl=en">Marco Tomassini</a>,
       <a href="https://anxosanchez.eu/">Angel Sánchez</a>
       <br>
-      <em>Scientific Reports (Nature)</em>, 2018 
+      <em>Scientific Reports (Nature)</em>, 2018
       <br>
       <a href="https://www.nature.com/articles/s41598-018-27544-5">article</a> &nbsp/&nbsp
       <a href="https://www.nature.com/articles/s41598-018-27544-5/metrics">metrics</a> &nbsp/&nbsp
@@ -254,7 +254,7 @@
 
 
 <div class="information">
-  
+
   <div class="">
     <h1>Talks, seminars, etc.</h1>
     <p>
@@ -294,7 +294,7 @@
       <div class="talk-info">
         <papertitle>Hierarchies and cooperation: an experiment</papertitle>
         <br>
-        <mainauthor><a href="data/fisesJoven2021.pdf">Talk</a></mainauthor>, at <a href="http://fises21joven.gefenol.es/">FisEs Joven 2021</a> Conference. 
+        <mainauthor><a href="data/fisesJoven2021.pdf">Talk</a></mainauthor>, at <a href="http://fises21joven.gefenol.es/">FisEs Joven 2021</a> Conference.
         <br>
         <em>May 2021</em>
       </div>
@@ -368,7 +368,7 @@
 <br>
 
 <div class="information">
-  
+
   <div class="extra-info">
     <h1>Extra</h1>
     <ul>
