--- a/index.html
+++ b/index.html
@@ -271,13 +271,27 @@
 
     <div class="element">
       <div class="talk-info">
-        <papertitle>Conference on Complex Systems (CCS)An Experimental Approach to Hierarchies: High Ranked Individuals Exploit Low Ranked Ones But Act Altruistically</papertitle>
+        <papertitle>AMETHYST Satellite: gAME THeory on complex SysTem</papertitle>
+        <br>
+        <mainauthor>Satellite</mainauthor>, at the <a href="https://ccs2021.univ-lyon1.fr/#HOME">2021 Conference on Complex Systems (CCS)</a> in Lyon, France.
+        <br>
+        <em>October 2021</em>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="element">
+      <div class="talk-info">
+        <papertitle>An Experimental Approach to Hierarchies: High Ranked Individuals Exploit Low Ranked Ones But Act Altruistically</papertitle>
         <br>
         <mainauthor>Talk</mainauthor>, at the <a href="https://ccs2021.univ-lyon1.fr/#HOME">2021 Conference on Complex Systems (CCS)</a> in Lyon, France.
         <br>
         <em>October 2021</em>
       </div>
     </div>
+
+    <hr>
 
     <div class="element">
       <div class="talk-info">
