Add website to the satellite

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       <div class="talk-info">
         <papertitle>AMETHYST Satellite: gAME THeory on complex SysTem</papertitle>
         <br>
-        <mainauthor>Satellite</mainauthor>, at the <a href="https://ccs2021.univ-lyon1.fr/#HOME">2021 Conference on Complex Systems (CCS)</a> in Lyon, France.
+        <mainauthor>Satellite</mainauthor> co-organizer, at the <a href="https://ccs2021.univ-lyon1.fr/#HOME">2021 Conference on Complex Systems (CCS)</a> in Lyon, France. (<a href="https://amethyst2021.weebly.com/">Website</a>)
         <br>
         <em>October 2021</em>
       </div>
