Update position and preferences

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         Pablo Lozano
       </div>
       <p>
-        I am Junior Visiting Researcher @<a href="https://ceu.edu">Central European University</a> where I work on networks, (explainable) AI, and computational social science.
+        I am Posdoctoral Fellow @<a href="https://ceu.edu">Central European University</a> where I work on networks, (explainable) AI, and computational social science.
         <br>
-        I currently work with János Kertész, Márton Karsai, and Gerardo Íñiguez. Other coauthors are <a href="https://anxosanchez.eu/">Angel Sánchez</a> and <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>.
+        I currently work with János Kertész, Márton Karsai, and Gerardo Iñiguez. Other coauthors are <a href="https://anxosanchez.eu/">Angel Sánchez</a> and <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>.
       </p>
 
       <p>
-        I work using modelling techniques (agent-based modelling, mainly) but I also use experimental approaches too. I make use of tools from network theory, machine learning, evolutionary game theory, and behavioral economics.
+        I work using modelling techniques (agent-based modelling, mainly) but I also use experimental approaches too. I make use of tools from network theory, machine learning, evolutionary game theory, and behavioral economics. I like reinforcement learning and Bayesian stats.
 
         <br>
 
