--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         Pablo Lozano
       </div>
       <p>
-        I am Posdoctoral Fellow @<a href="https://ceu.edu">Central European University</a> where I work on networks, (explainable) AI, and computational social science.
+        I am Postdoctoral Fellow @<a href="https://ceu.edu">Central European University</a> where I work on networks, (explainable) AI, and computational social science.
         <br>
         I currently work with János Kertész, Márton Karsai, and Gerardo Iñiguez. Other coauthors are <a href="https://anxosanchez.eu/">Angel Sánchez</a> and <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>.
       </p>
