New fonts, format and colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="images/duck_icon.png">
 
-  <title>Pablo Lozano</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+
+  <title>Pablo Lozano Rodríguez</title>
 
 </head>
 
@@ -21,13 +27,13 @@
 
   <div class="personal">
     <div>
-      <div class="name">
-        Pablo Lozano
+      <div class="full-line name">
+        Pablo Lozano Rodríguez
       </div>
       <p>
         I am Postdoctoral Fellow @<a href="https://ceu.edu">Central European University</a> where I work on networks, (explainable) AI, and computational social science.
         <br>
-        I currently work with János Kertész, Márton Karsai, and Gerardo Iñiguez. Other coauthors are <a href="https://anxosanchez.eu/">Angel Sánchez</a> and <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>.
+        I currently work with János Kertész, Márton Karsai, and Gerardo Íñiguez. Other coauthors are <a href="https://anxosanchez.eu/">Angel Sánchez</a> and <a href="https://sites.google.com/site/antonionialberto/home">Alberto Antonioni</a>.
       </p>
 
       <p>
@@ -259,7 +265,7 @@
   <div class="">
     <h1>Talks, seminars, etc.</h1>
     <p>
-      These are the places I've been to, talked in or plan to go! If you think I could give a talk, feel free to invite me. Also, you can grab the slides (if any) and reuse them with attribution!
+      These are the places I've been to, talked in or plan to go. If you think I could give a talk, feel free to <a href="mailto:lozano.p15@gmail.com">invite me</a>. Also, you can grab the slides (if any) and reuse them with attribution!
     </p>
   </div>
 
@@ -346,7 +352,7 @@
         <papertitle>Complexity 72 hours</papertitle>
         <br>
         Part of Ennio Bilancini’s group researching on social physics.
-        Derived from the three-day research event, there’s a pre-print in arXiv.
+        Derived from the three-day research event, there’s a <a href="https://arxiv.org/abs/1906.09133">preprint</a> in arXiv.
         <br>
         <em>June 2019</em>
       </div>
@@ -400,7 +406,7 @@
     <h2>Technical skills</h2>
     <ul>
       <li><mainauthor>Programming</mainauthor>: Python, R, Scala, C, C++, Haskell.</li>
-      <li><mainauthor>ML and data analysis</mainauthor>: Tensorflow, Keras, Scikit.</li>
+      <li><mainauthor>ML and data analysis</mainauthor>: PyTorch, Tensorflow, Keras, Scikit, JAX</li>
       <li><mainauthor>Web development</mainauthor>: Django, Flask. HTML/CSS, Javascript.</li>
       <li><mainauthor>Linux Systems Administrator</mainauthor> basic <a href="https://ude.my/UC-9ORNNZ0Q">certification</a>.</li>
       <li><mainauthor>Reviewer</mainauthor> for <em>Nature Scientific Reports</em>, <em>PLOS One</em> and <em>IOP Science</em> scientific journals.</li>
