--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
           Pablo Lozano Rodríguez
         </div>
         <p>
-          I am Postdoctoral Fellow @<a href="https://ceu.edu">Central European University</a> where I work on networks,
+          I am Software Developer @<a href="https://www.t3rn.io">t3rn</a> where I work on SDKs, cryptography, blockchain
+          and Web3. I love Rust and TS, and now I'm involved in testing.
+          <br>
+          Previously, I was a Postdoctoral Fellow @<a href="https://ceu.edu">Central European University</a> where I
+          work on networks,
           (explainable) AI, and computational social science.
           <br>
           I currently work with János Kertész, Márton Karsai, and Gerardo Íñiguez. Other coauthors are <a
