Badly separate paragraphs

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           I am Software Developer @<a href="https://www.t3rn.io">t3rn</a> where I work on SDKs, cryptography, blockchain
           and Web3. I love Rust and TS, and now I'm involved in testing.
           <br>
+          <br>
           Previously, I was a Postdoctoral Fellow @<a href="https://ceu.edu">Central European University</a> where I
           work on networks,
           (explainable) AI, and computational social science.
@@ -46,7 +47,8 @@
         </p>
 
         <p>
-          I work doing data analysis and programming modelling, but I also use experimental approaches from behavioral
+          I used to work on data analysis and programming modelling, but I also use experimental approaches from
+          behavioral
           economics.
           I make use of tools from network theory, machine learning, evolutionary game theory, and behavioral economics.
           I like reinforcement learning and Bayesian statistics.
